# instaroom

./: .gitignore  DESIGN.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/routes/: generate.py  rooms.py
backend/app/services/: gemini_client.py  models.py  pipeline.py
backend/app/services/crawler/: __init__.py  scraper.py
backend/app/services/image_gen/: __init__.py  generate.py
backend/app/services/vlm/: __init__.py  aggregation.py  analysis.py  prompt.py
backend/app/services/worldslabs/: __init__.py  config.py  convert.py  models.py  prompt.py
backend/tests/: test_pipeline.py  test_quick.py
backend/tests/fixtures/: natgeo_parsed.json  natgeo_raw.json
frontend/: .env.example  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/app/[locale]/: error.tsx  layout.tsx  page.tsx
frontend/src/app/[locale]/r/[username]/: not-found.tsx  opengraph-image.tsx  page.tsx
frontend/src/components/home/: hero-section.tsx  recent-jobs-banner.tsx  username-input.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  locale-switcher.tsx
frontend/src/components/room/: persona-card.tsx  room-viewer.tsx  share-buttons.tsx  splat-canvas.tsx  viewer-controls.tsx
frontend/src/components/status/: error-state.tsx  stage-card.tsx  stage-progress.tsx
frontend/src/hooks/: use-job-polling.ts  use-local-jobs.ts
frontend/src/lib/: api.ts  constants.ts  types.ts
frontend/src/messages/: en.json  ko.json
(+1 files in other folders)
